--- a/Front_End/package.json
+++ b/Front_End/package.json
@@ -12,6 +12,7 @@
     "http-proxy-middleware": "^3.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-kakao-login": "^2.1.1",
     "react-router-dom": "^6.23.1",
