--- a/build.gradle
+++ b/build.gradle
@@ -83,3 +83,7 @@ task copyReactBuildFiles(type: Copy) {
 	from "$frontendDir/build"
 	into "$projectDir/src/main/resources/static"
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters"
+}
