--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,7 @@ spring:
         format_sql: true
 mybatis:
   mapper-locations: mappers/*Mapper.xml
+naver:
+  client:
+    id: 0nn0y45wnv
+    secret: qiC2NBDDK6Aih1VJj4iG4qONwYtpyVFdY89vcF7h
