--- a/Front_End/package.json
+++ b/Front_End/package.json
@@ -16,6 +16,7 @@
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-kakao-login": "^2.1.1",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
