--- a/Front_End/package.json
+++ b/Front_End/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "http-proxy-middleware": "^3.0.2",
+    "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
