--- a/Front_End/package.json
+++ b/Front_End/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "react-datepicker": "^4.11.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "http-proxy-middleware": "^3.0.2",
