--- a/Front_End/package.json
+++ b/Front_End/package.json
@@ -4,21 +4,22 @@
   "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@fullcalendar/react": "^6.1.8",
-    "@fullcalendar/daygrid": "^6.1.8",
-    "@fullcalendar/interaction": "^6.1.8",
-    "react-datepicker": "^4.11.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "http-proxy-middleware": "^3.0.2",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-calendar": "^5.0.0",
     "react-cookie": "^7.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.3.1",
     "react-kakao-login": "^2.1.1",
     "react-kakao-maps-sdk": "^1.1.27",
