--- a/Front_End/package.json
+++ b/Front_End/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-bootstrap-icons": "^1.11.4",
     "react-calendar": "^5.0.0",
     "react-cookie": "^7.2.0",
     "react-datepicker": "^4.25.0",
